test/arrays/diten/privatizedArrayErrorMessage.good
privatizedArrayErrorMessage.chpl:12: error: unresolved call 'foo([BlockDom(1,int,false)] int)'
privatizedArrayErrorMessage.chpl:3: note: candidates are: foo(A: C)
